[tool.poetry]
name = "zeplyn"
version = "0.1.1"
description = "Zeplyn allows to you release python package fastly and easily in one command"
authors = ["ssantoshp <santoshpassoubady@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
zeplyn = "zeplyn.zeplyn:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.3.2"}
twine = "3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
